<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/plugin_task_submit_logo" />

    <!-- 账号栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plugin_task_submit_account"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/plugin_task_submit_etAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:hint="@string/plugin_task_submit_account_tips"
            android:textColorHint="#D1D1D1"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- 分割线 -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#D1D1D1" />

    <!-- 密码栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plugin_task_submit_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/plugin_task_submit_etPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:hint="@string/plugin_task_submit_password_tips"
            android:inputType="textPassword"
            android:textColorHint="#D1D1D1"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- 分割线 -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#D1D1D1" />

    <!-- 是否需要保存密码? -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/plugin_task_submit_cbSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:text="@string/plugin_task_submit_save_password" />
    </LinearLayout>

    <!-- 按钮栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/plugin_task_submit_btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/plugin_task_submit_btn_confirm_background"
            android:text="@string/plugin_task_submit_login"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/plugin_task_submit_btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/plugin_task_submit_btn_cancel_background"
            android:text="@string/cancel"
            android:textColor="#919191"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>